# video_shm_socket

./: .gitignore  CMakeLists.txt  README.md  video_capture.cpp  video_capture_sim.cpp  video_client.cpp  video_server.cpp
include/: frame_protocol.c  frame_protocol.h  sem.h  shm.c  socket.c  yuv_to_jpeg.cpp
old/: sem.c  shm.c  shm.h  video_show.cpp  yuv_to_jpeg.h
